Add contact checker and api docs
